--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <script>
-      window.CMS.init();
+      CMS.init({
+        config: "/admin/config.yml",
+      });
     </script>
   </body>
 </html>
